fix: storybook - some inline stories in docs cutting off (#2915)
Prevent inline stories on the Docs pages from cutting off content, by
adjusting the overflow property on inline styles. This was affecting
components such as in-field button, color loupe, etc.

The display difference between regular stories and inline stories is
because Storybook sets an inline style with overflow: auto in its
InlineStory function. This appears to be originally added in Storybook
to help fixed elements from leaking out, but that does not appear to be
an issue with our fixed elements (or anymore due to additional wrappers)

CSS-816

--- a/.storybook/assets/base.css
+++ b/.storybook/assets/base.css
@@ -34,7 +34,7 @@ svg:has(symbol):not(:has(use)) {
 	display: none;
 }
 
-/* set back to default h2 styles */
+/* Make sure heading provided by <Stories/> doc block uses styles consistent with the default H2. */
 #variants {
 	font-size: 24px;
 	margin-block-end: 8px;
@@ -44,4 +44,10 @@ svg:has(symbol):not(:has(use)) {
 	letter-spacing: normal;
 	text-transform: none;
 	border-block-end: 1px solid hsla(203deg, 50%, 30%, 15%);
+}
+
+.sb-story {
+	/* Prevent inline stories in the Docs from cutting off content (which is different than the regular
+	story view), due to Storybook's inline style that sets overflow: auto */
+	overflow: visible !important;
 }
